--- a/Meilenstein02/sequenz_draw.tex
+++ b/Meilenstein02/sequenz_draw.tex
@@ -1,5 +1,4 @@
-\subsubsection{Wahl- und Ausrüstungsphase}
-In diesem Diagramm wird die Wahl- und Ausrüstungsphase durch ein Sequenzdiagramm beschrieben.
+In diesem Diagramm wird die Wahl- und Ausrüstungsphase durch ein Sequenzdiagramm beschrieben.\\
 
 \begin{tikzpicture}
 	\begin{umlseqdiag}
