--- a/Meilenstein02/sequenz_verbindung.tex
+++ b/Meilenstein02/sequenz_verbindung.tex
@@ -1,55 +1,24 @@
+Beim Aufbau einer Verbindung mit dem Server, muss der Spieler seinen Anzeige-Namen angeben und ob er ein Mensch- oder ein KI-Spieler ist. \\
 \begin{tikzpicture} 
     \begin{umlseqdiag} 
-        \umlactor[class=Spieler]{P1}
+        \umlactor[class=Spieler]{P}
         \umlobject[no ddots]{Server}
-        \umlactor[class=Spieler]{P2}
         
-        \begin{umlcall}[op={register}, return={Success}]{P1}{Server}
-            \begin{umlcall}[op={name(String)}]{P1}{Server} 
+        \begin{umlcall}[op={register}, return={Success}]{P}{Server}
+            \begin{umlcall}[op={name(String)}]{P}{Server} 
             \end{umlcall}
             
             \begin{umlfragment}[type=alt, label=Mensch, inner xsep=7] 
-                \begin{umlcall}[op={type("Mensch")}]{P1}{Server} 
+                \begin{umlcall}[op={type("Mensch")}]{P}{Server} 
                 \end{umlcall}
 
                 \umlfpart[KI]
 
-                \begin{umlcall}[op={type("KI")}]{P1}{Server}
+                \begin{umlcall}[op={type("KI")}]{P}{Server}
                 \end{umlcall}
             \end{umlfragment}
 
         \end{umlcall}
-
-        \begin{umlcall}[dt=35, op={register}, return={Success}]{P2}{Server}
-            \begin{umlcall}[op={name(String)}]{P2}{Server} 
-            \end{umlcall}
-            
-            \begin{umlfragment}[type=alt, label=Mensch, inner xsep=7] 
-                \begin{umlcall}[op={type("Mensch")}]{P2}{Server} 
-                \end{umlcall}
-
-                \umlfpart[KI]
-
-                \begin{umlcall}[op={type("KI")}]{P2}{Server}
-                \end{umlcall}
-            \end{umlfragment}
-
-        \end{umlcall}
-
-        \begin{umlcall}[op=ready]{Server}{P1}
-            \begin{umlcall}[op=ready, dt=-1]{Server}{P2}
-            \end{umlcall}
-        \end{umlcall}
-
-        \begin{umlfragment}[type=alt, label=P1, inner xsep=7] 
-            \begin{umlcall}[op=start, dt=10]{P1}{Server} 
-            \end{umlcall}
-
-            \umlfpart[P2]
-
-            \begin{umlcall}[op=start, dt=20]{P2}{Server}
-            \end{umlcall}
-        \end{umlfragment}
 
     \end{umlseqdiag} 
 \end{tikzpicture}
