--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -156,7 +156,7 @@ spezifizieren.
 
 \clearpage
 \section{Abläufe im System}
-\subsection{Verbindungsaufbau zum Server}
+\subsection{Verbindungsaufbau zum Server}	\label{connect}
 \input{Meilenstein02/sequenz_verbindung.tex}
 
 \subsection{Beitreten einer Lobby und Spiel starten}
