--- a/Meilenstein02/state_userClient.tex
+++ b/Meilenstein02/state_userClient.tex
@@ -1,6 +1,8 @@
 %Found at: %https://tex.stackexchange.com/questions/420217/change-style-of-basic-states-in-tikz-uml-package
 \tikzset{singlestate/.style={draw,fill=yellow!20, rounded corners, align=center}}
 
+Im folgenden werden die möglichen Zustände des Clients in einem Zustandsdiagramm dargestellt.
+
 \begin{tikzpicture}
 	\umlstateinitial[name=initial, x=0, y=0]
 	\begin{umlstate}[x=7, y=-2, name=menu]{Hauptmenü}
@@ -14,14 +16,14 @@
 	\umlstatefinal[x=16, y=-0, name=final]
 	\node[singlestate] at (7, -8) (lobbyView){Lobbyübersicht};
 	
-	\begin{umlstate}[x=7, y=-13, name=lobby]{Lobby}
+	\begin{umlstate}[x=7, y=-11.5, name=lobby]{Lobby}
 		\umlstatetext{}
 		\umlbasicstate[x=0, y=0, name=spieler, do={}, align=center]{in Lobby (Rolle: Spieler)}
 		\umlbasicstate[x=0, y=-4, name=zuschauer, do={}]{in Lobby (Rolle: Zuschauer)}
 	\end{umlstate}
 	
-	\node[singlestate] at (7, -20) (inGame){im Spiel};
-	\node[singlestate] at (7, -22) (gameEnded){Spiel beendet};
+	\node[singlestate] at (7, -18) (inGame){im Spiel};
+	\node[singlestate] at (7, -20) (gameEnded){Spiel beendet};
 	
 	\umlVHtrans{initial}{menuDisconnected}
 	
@@ -39,7 +41,7 @@
 	\umltrans[arg={Lobbyübersicht aufrufen/}, pos=0.7, align=right, anchor1=-127, anchor2=158]{menuConnected}{lobbyView}
 	\umltrans[arg={Zurück zum Menü/}, pos=0.3, align=left, anchor1=23, anchor2=-56]{lobbyView}{menuConnected}
 	
-	\umltrans[arg={verlasse Lobby/}, pos=0.4, align=left, anchor1=90, anchor2=-90]{lobby}{lobbyView}
+	\umltrans[arg={verlasse Lobby/}, pos=0.3, align=left, anchor1=90, anchor2=-90]{lobby}{lobbyView}
 	
 	\umlHVHtrans[arg={betrete Lobby[Spielerslots belegt]/}, pos=1.5, align=left, anchor1=0, anchor2=0, arm1=2cm]{lobbyView}{zuschauer}
 	\umlHVHtrans[arg={betrete Lobby[Spielerslot frei]/}, pos=1.5, align=right, anchor1=180, anchor2=180, arm1=-2cm]{lobbyView}{spieler}
