added \clearpage for better layout

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -122,25 +122,33 @@
 \paragraph{Verbindungsaufbau zum Server}
 \label{connect} \mbox{}\\
 \input{Meilenstein02/sequenz_verbindung.tex}
+\clearpage
 \paragraph{Beitreten einer Lobby und Spiel starten} \mbox{}\\
 \label{Sequ_Lobby}
 \input{Meilenstein02/sequenz_lobby.tex}
+\clearpage
 \paragraph{Ablauf des Spiels} \mbox{}\\
 \subparagraph{Wahl- und Ausrüstungsphase} \mbox{}\\
 \input{Meilenstein02/sequenz_draw.tex}
+\clearpage
 \subparagraph{Durchführen eines Zugs} \mbox{}\\
 \input{Meilenstein02/sequenz_action.tex}
+\clearpage
 \subparagraph{Aktualisieren des Spielfelds} \mbox{}\\
 \input{Meilenstein02/sequenz_update.tex}
+\clearpage
 \paragraph{Spielende und Abbau der Verbindung zum Server} \mbox{}\\
 \label{Sequ_Winner}
 \input{Meilenstein02/sequenz_end.tex}
+\clearpage
 \paragraph{Zustände im Spiel} \mbox{}\\
 \input{Meilenstein02/state_game.tex}
+\clearpage
 \paragraph{Zustände des Clients} \mbox{}\\
 \input{Meilenstein02/state_userClient.tex}
 \paragraph{Zustände des KI-Clients} \mbox{}\\
 \input{Meilenstein02/state_ki.tex}
+\clearpage
 \paragraph{Zustände des Servers} \mbox{}\\
 \input{Meilenstein02/state_server.tex}
 
