added introductory sentence before ki states

--- a/Meilenstein02/state_ki.tex
+++ b/Meilenstein02/state_ki.tex
@@ -1,3 +1,5 @@
+Das untenstehende Zustandsdiagramm gibt einen kleinen Überblick über die grobe Funktionsweise des KI-Clients. 
+
 \begin{tikzpicture} 
     \umlstateinitial[y=4, name=initial]
     \begin{umlstate}[name=running]{running}
