--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -153,17 +153,17 @@
 \input{Meilenstein02/state_server.tex}
 
 \clearpage
-\subsubsection{Funktionale Systemanforderungen}
+\subsection{Funktionale Systemanforderungen}
 Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des Softwaresystems spezifizieren.
-\paragraph{Server} \mbox{}\\
+\subsubsection{Server} \mbox{}\\
 \input{Meilenstein01/chapter/serverFA.tex}
-\paragraph{Client} \mbox{}\\
+\subsubsection{Client} \mbox{}\\
 \input{Meilenstein01/chapter/clientFA.tex}
-\paragraph{KI-Client} \mbox{}\\
+\subsubsection{KI-Client} \mbox{}\\
 \input{Meilenstein01/chapter/kiFA.tex}
-\paragraph{Editor} \mbox{}\\
+\subsubsection{Editor} \mbox{}\\
 \input{Meilenstein01/chapter/editorFA.tex}
-\paragraph{Allgemeine funktionale Anforderungen} \mbox{}\\
+\subsubsection{Allgemeine funktionale Anforderungen} \mbox{}\\
 \input{Meilenstein01/chapter/genFA.tex}
 
 \clearpage
@@ -171,13 +171,16 @@ Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des
 \subsection{Schnittstellenarten und Dialogstruktur}
 \subsubsection{Schnittstellenbeschreibung des Clients}
 \input{Meilenstein03/schnittstelle_client.tex}
+\clearpage
 \subsubsection{Schnittstellenbeschreibung des Servers}
 \input{Meilenstein03/schnittstelle_server.tex}
+\clearpage
 \subsubsection{Schnittstellenbeschreibung des Editors}
 \input{Meilenstein03/schnittstelle_editor.tex}
+\clearpage
 \subsubsection{Schnittstellenbeschreibung des KI-Clients}
 \input{Meilenstein03/schnittstelle_ki.tex}
-
+\clearpage
 \subsection{Graphische Gestaltung und Nutzungskonzept}
 \input{Meilenstein03/nutzungskonzept.tex}
 
