finished editor-schnittstelle

--- a/Meilenstein03/schnittstelle_editor.tex
+++ b/Meilenstein03/schnittstelle_editor.tex
@@ -8,19 +8,32 @@ Erstellt ein Mensch-Client über die Lobbyübersicht eine neue Lobby, so muss er
 	
 	\node[block] (Editor) at (0, 7) {<<Dialog>>\\ \textbf{Editor}};
 	
-	\node[block, above = 1.0cm of Editor] (Help) {<<Popup>>\\ \textbf{Help}\\ (QA10)};
+	\node[block, above left = 1.0cm and 1.0cm of Editor] (Help) {<<Popup>>\\ \textbf{Help}\\ (QA10)};
 	
-	\node[block, below left = 1.0cm and 1.5cm of Editor] (Szenario) {<<Dialog>>\\ \textbf{Szenario-Editor}};
+	\node[block, below left = 3.0cm and 3.0cm of Editor] (Szenario) {<<Dialog>>\\ \textbf{Szenario-Editor}};
 	
-	\node[block, below = 1.0cm of Editor] (Partie) {<<Dialog>>\\ \textbf{Partie-Editor}};
+	\node[block, below = 3.0cm of Editor] (Partie) {<<Dialog>>\\ \textbf{Partie-Editor}};
 	
-	\node[block, below right = 1.0cm and 1.0cm of Editor] (Charakter) {<<Dialog>>\\ \textbf{Charakter-Editor}};
+	\node[block, below right = 3.0cm and 3.0cm of Editor] (Charakter) {<<Dialog>>\\ \textbf{Charakter-Editor}};
 	
-	TODO: addLines
+	\node[block, above right = 1.0cm and 1.5cm of Editor] (Lobby) {<<Dialog>>\\ \textbf{create Lobby}};
+	
+	
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Editor.west) -| (Help.south) node [near start, xshift=3mm] {\small Help};
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Help.east) -| ([xshift= -0.5cm]Editor.north) node [near start, xshift=3mm] {\small Close};
+	
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Editor.east) -| (Lobby.south) node [near start, xshift=1.5mm] {\small safe $\vert\vert$ Back};
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Lobby.west) -| ([xshift= 0.5cm]Editor.north) node [near start, xshift=3mm] {\small configure};
+	
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] ([xshift = -0.5cm]Editor.south) -- (Szenario.north) node [near start, xshift=-30mm, yshift = -5mm] {\small Szenario};
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Szenario.east) -- (Partie.west) node [near start, xshift=3mm] {\small Partie};
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Partie.east) -- (Charakter.west) node [near start, xshift=3mm] {\small Charakter};
+	\draw[thick, ->, shorten >=1mm,shorten <=1mm] (Charakter.north) -- ([xshift = 0.5cm]Editor.south) node [near start, xshift=4mm, yshift = 10mm] {\small Editor};
+	
+	
 	
 	\end{tikzpicture}
 	\caption{graphische Schnittstelle des Editors}
 \end{figure}
-TODO: Dialogstrukturdiagramm (new Lobby -> Dialog Editor -> Szenario -> Partiekonfiguration(Zeit für Phasen, Wahrscheinlichkeiten) -> CharakterBeschreibung -> back / new Lobby) einfache Benutzung QA10
 
 Um die Konfiguration, die im Editor vorgenommen wurde, über die Websocket-Schnittstelle des Mensch-Clients mit dem Server zu kommunizieren, verfügt der Editor über eine JSON-Schnittstelle (FA-E \ref{e-json-encoding}, FA-E \ref{e-json-decoding}).
